--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "guzzlehttp/psr7": "^1.7 || ^2.1",
         "illuminate/support": "^7.0|^8.0",
         "laravel/framework": "^7.0|^8.0",
-        "pusher/pusher-php-server": "^3.0|^4.0"
+        "pusher/pusher-php-server": "^3.0|^4.0|^5.0"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
